--- a/WpfUI/MainWindow.xaml
+++ b/WpfUI/MainWindow.xaml
@@ -7,40 +7,74 @@
         mc:Ignorable="d"
         Title="Simple IOIO" Height="350" Width="525">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
-        </Grid.ColumnDefinitions>
-        <TextBlock x:Name="ServoPosition_Label" Grid.Row="0" Grid.Column="0" Margin="10,10" HorizontalAlignment="Right" TextWrapping="Wrap" Text="Servo Position"/>
-        <Slider x:Name="ServoPosition" Grid.Row="0"  Grid.Column="1"         Margin="10,10" HorizontalAlignment="Left"                 Minimum="600" Maximum="2000" Width="300" ValueChanged="ServoPosition_ValueChanged" ></Slider>
+        <TabControl>
+            <TabItem>
+                <TabItem.Header>
+                    <StackPanel>
+                        <TextBlock Text="Main"/>
+                    </StackPanel>
+                </TabItem.Header>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock x:Name="ServoPosition_Label" Grid.Row="0" Grid.Column="0" Margin="10,10" HorizontalAlignment="Right" TextWrapping="Wrap" Text="Servo Position"/>
+                    <Slider x:Name="ServoPosition" Grid.Row="0"  Grid.Column="1"         Margin="10,10" HorizontalAlignment="Left"                 Minimum="600" Maximum="2000" Width="300" ValueChanged="ServoPosition_ValueChanged" ></Slider>
 
-        <TextBlock x:Name="LED_Label"  Grid.Row="1" Grid.Column="0" Margin="10,10" HorizontalAlignment="Right" TextWrapping="Wrap" Text="LED"/>
-        <ToggleButton x:Name="LEDState" Grid.Row="1"  Grid.Column="1"         Margin="10,10" HorizontalAlignment="Left" Click="LEDState_Click" >
-                <ToggleButton.Style>
-                <Style TargetType="{x:Type ToggleButton}">
-                    <Setter Property="Content" Value="Off"/>
-                    <Style.Triggers> <!-- why doesn't color work? -->
-                        <Trigger Property="IsChecked" Value="True">
-                            <Setter Property="Content" Value="On"/>
-                            <Setter Property="Background" Value="Yellow"/>
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </ToggleButton.Style>        </ToggleButton>
+                    <TextBlock x:Name="LED_Label"  Grid.Row="1" Grid.Column="0" Margin="10,10" HorizontalAlignment="Right" TextWrapping="Wrap" Text="LED"/>
+                    <ToggleButton x:Name="LEDState" Grid.Row="1"  Grid.Column="1"         Margin="10,10" HorizontalAlignment="Left" Click="LEDState_Click" >
+                        <ToggleButton.Style>
+                            <Style TargetType="{x:Type ToggleButton}">
+                                <Setter Property="Content" Value="Off"/>
+                                <Style.Triggers>
+                                    <!-- why doesn't color work? -->
+                                    <Trigger Property="IsChecked" Value="True">
+                                        <Setter Property="Content" Value="On"/>
+                                        <Setter Property="Background" Value="Yellow"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </ToggleButton.Style>
+                    </ToggleButton>
 
-        <TextBlock x:Name="BoardDetails_Label" Grid.Row="2"  Grid.Column="0" Margin="10,10" HorizontalAlignment="Right" TextWrapping="Wrap"  Text="Board Information"  />
-        <TextBox x:Name="BoardDetails"  Grid.Row="2"  Grid.Column="1"        Margin="10,10" HorizontalAlignment="Left"  TextWrapping="Wrap"  Height="60" Width="300" IsEnabled="false"/>
+                    <TextBlock x:Name="BoardDetails_Label" Grid.Row="2"  Grid.Column="0" Margin="10,10" HorizontalAlignment="Right" TextWrapping="Wrap"  Text="Board Information"  />
+                    <TextBox x:Name="BoardDetails"  Grid.Row="2"  Grid.Column="1"        Margin="10,10" HorizontalAlignment="Left"  TextWrapping="Wrap"  Height="60" Width="300" IsEnabled="false"/>
 
-        <TextBlock x:Name="ComPort_Label" Grid.Row="3"  Grid.Column="0"      Margin="10,10" HorizontalAlignment="Right" TextWrapping="Wrap"  Text="Com Port"  />
-        <TextBox x:Name="ComPort_Field"  Grid.Row="3"  Grid.Column="1"       Margin="10,10" HorizontalAlignment="Left"  TextWrapping="Wrap"  Height="20" Width="300" IsEnabled="false"/>
+                    <TextBlock x:Name="ComPort_Label" Grid.Row="3"  Grid.Column="0"      Margin="10,10" HorizontalAlignment="Right" TextWrapping="Wrap"  Text="Com Port"  />
+                    <TextBox x:Name="ComPort_Field"  Grid.Row="3"  Grid.Column="1"       Margin="10,10" HorizontalAlignment="Left"  TextWrapping="Wrap"  Height="20" Width="300" IsEnabled="false"/>
 
-        <TextBlock x:Name="Instructions" Grid.Row="4"  Grid.Column="0" Grid.ColumnSpan="2"   Margin="10,10" HorizontalAlignment="Center" TextWrapping="Wrap"  Text="Servvo should be connected to pin 3. The board should be paired via Bluetooth"  />
+                    <TextBlock x:Name="Instructions" Grid.Row="4"  Grid.Column="0" Grid.ColumnSpan="2"   Margin="10,10,95,10" HorizontalAlignment="Center" TextWrapping="Wrap"  
+                               Width="491" >
+                        <Span>The board should be paired via Bluetooth before running this applicaton.<LineBreak/>
+                            Pin 3 should be connected to servo. <LineBreak/>
+                            Pin 2 is configured as Digital Input. 
+                            </Span>
+                    </TextBlock>
+                </Grid>
+            </TabItem>
+            <TabItem>
+                <TabItem.Header>
+                    <StackPanel>
+                        <TextBlock Text="Log"/>
+                    </StackPanel>
+                </TabItem.Header>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <ScrollViewer>
+                        <TextBox x:Name="MessageLog"     Margin="10,10" HorizontalAlignment="Stretch"  TextWrapping="Wrap"  IsEnabled="false"/>
+                    </ScrollViewer>
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
